--- a/main.html
+++ b/main.html
@@ -1,7 +1,8 @@
-<!DOCTYME html>
-<html>
+<!DOCTYME html<
+<html<
   <body>Hola mundo</body>
-  Jimena Chinchilla
+<!DOCTYME html<
+ <b> Jimena Chinchilla </b>
   kevin segura 
   Jherom
 </html>
