--- a/main.html
+++ b/main.html
@@ -1,11 +1,13 @@
 <!DOCTYME html<
 <html<
   <body>Hola mundo</body>
-
+ <b> Jimena Chinchilla </b>
 geiner
-  kevin segura 
+<div> 
+  <p>kevin segura</p>
+  <div>
 <div>
   <p>Jherom</p>
 </div>
-   <b> Jimena Chinchilla </b>
+  
 </html>
