--- a/main.html
+++ b/main.html
@@ -1,13 +1,14 @@
 <!DOCTYME html<
 <html<
-  <body>Hola mundo</body>
- <b> Jimena Chinchilla </b>
+  <body>
+    Hola mundo
+    <div>
+      <p>Jherom</p>
+    </div>
+  </body>
+
 geiner
-<div> 
-  <p>kevin segura</p>
-  <div>
-<div>
-  <p>Jherom</p>
-</div>
-  
+  kevin segura 
+
+   <b> Jimena Chinchilla </b>
 </html>
