--- a/main.html
+++ b/main.html
@@ -4,13 +4,13 @@
     Hola mundo
     <div>
       <p>Jherom</p>
+      <b> Jimena Chinchilla </b>
     </div>
   </body>
 
-geiner
-<div>  
-<p>kevin segura<p/>
-  <div>
 
-   <b> Jimena Chinchilla </b>
+geiner
+  kevin segura 
+
+  
 </html>
