--- a/main.html
+++ b/main.html
@@ -4,14 +4,16 @@
     Hola mundo
     <div>
       <p>Jherom</p>
-      <b> Jimena Chinchilla </b>
+  
     </div>
- kevin segura 
-
+    <div>
+      <b> Jimena Chinchilla </b>
+      </div>
   </body>
 
 
 geiner
- 
+  kevin segura 
+
   
 </html>
