--- a/main.html
+++ b/main.html
@@ -7,15 +7,13 @@
     </div>
 
     <div>
-      <b> Jimena Chinchilla </b>
-      </div>
+      <p> Jimena Chinchilla </p>
+    </div>
   </body>
 
 
 geiner
- <div>
-      <b> kevin segura </b>
-      </div>
+  kevin segura 
 
   
 </html>
