--- a/main.html
+++ b/main.html
@@ -7,11 +7,8 @@
     </div>
 
     <div>
-      <p> Jimena Chinchilla </p>
+      <p> <b>Jimena Chinchilla </b></p>
     </div>
- <div>
-      <b> kevin segura </b>
-      </div>
   </body>
 
 
