--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYME html<
-<html>
+<html<
   <body>
     Hola mundo
     <div>
@@ -9,6 +9,9 @@
     <div>
       <p> <b>Jimena Chinchilla </b></p>
     </div>
+ <div>
+ <p> kevin segura </p>
+ </div>
   </body>
 
 
