--- a/main.html
+++ b/main.html
@@ -3,18 +3,8 @@
   <body>
     Hola mundo - practica semana 9
     <div>
-      <p>Jherom</p>
+      <p>Natalia</p>
     </div>
-
-    <div>
-      <p> <b>Jimena Chinchilla </b></p>
-    </div>
-  </body>
-<div>
-  <p>geiner</p>
-</ div >
-geiner
-  kevin segura 
 
   
 </html>
