Limpieza general del archivo main.html

--- a/main.html
+++ b/main.html
@@ -1,20 +1,16 @@
 <!DOCTYME html<
 <html>
+  <head>
+    <title>Practica HTML</title>
+  </head>
   <body>
-    Hola mundo - practica semana 9
+    <header>
+      <h1>Hola mundo</h1>
+    </header>
     <div>
       <p>Jherom</p>
     </div>
-
-    <div>
-      <p> <b>Jimena Chinchilla </b></p>
-    </div>
   </body>
 <div>
-  <p>geiner</p>
-</ div >
-geiner
-  kevin segura 
 
-  
 </html>
